<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="welcome_to_android">Welcome to Android!</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="largeText">Large Text</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="username">name</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="studentId">Student ID</string>
    <string name="School">School</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">Email</string>
    <string name="phone_number">phone</string>
</resources>